--- a/package.json
+++ b/package.json
@@ -8,10 +8,7 @@
   },
   "author": "",
   "license": "ISC",
-  "devDependencies": {
-    "json-server": "^0.16.3"
-  },
   "dependencies": {
-    "multer": "^1.4.2"
+    "json-server": "0.16.3"
   }
 }
